--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         <br>
         <p> this is 2nd para</p>
 
-        <a href=" https:www.linkedIn.com" target=_blank>
+        <a href=" https:www.linkedIn.com" target=_blank title="this takes you to LinkedIn">
             LinkedIn
+        </a>
+
+        <a href=" https:www.youtube.com" target="_self" title="this takes you to Youtube">
+
         </a>
 
     </body>
