new index and imgs

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <a href=" https:www.linkedIn.com" target=_blank title="this takes you to LinkedIn">
             LinkedIn
         </a>
-
+        <br>
         <a href=" https:www.youtube.com" target="_self" title="this takes you to Youtube">
-
+            <h1>Youtube</h1>
         </a>
-
+        <a href="index1.html" target ="_blank" title="A cute image">
+            <h3> Dont click here </h3>
+        </a>
     </body>
 </html>
