last commit of day-1

--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
     <body>
-         <img src="pixil-frame-0.png">  
-    </body>
+         <a href="index.html">
+         <img src="pixil-frame-0.png" title="this is a pixel art" alt=" A simple img of spear in pixel art format">  
+         </a>
+         <audio controls loop muted src="bubpop.mp3">
+         </audio>
+        </body>
+    </head>
 </html>
    
         
