--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1>This is a heading </h1>
     <hr>
     <body>
-        <h6> This is a sub heading?</h6>
+        <h1> This is a <ins>sub</ins> heading?</h1>
         <br>    
         <p>agni inventore et? Repellendus culpa placeat consectetur? Placeat quas ea nam incidunt eveniet!</p>
         <br>
@@ -13,6 +13,7 @@
         <br>
         <p> this is 2nd para</p>
 
+        <hr>
         <a href=" https:www.linkedIn.com" target=_blank title="this takes you to LinkedIn">
             LinkedIn
         </a>
