changes to title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <!-- this is a simplest comment and doesnt appear -->
-    <title>Rhishabh Portfolio</title>
+    <title>Rhishabh Html test</title>
     <h1>This is a heading </h1>
     <hr>
     <body>
