Day-2 changes and learning

--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
     <!-- this is a simplest comment and doesnt appear -->
+    <div style="background-color: coral;">
     <title>Rhishabh Html test</title>
     <h1>This is a heading </h1>
     <hr>
     <body>
         <h1> This is a <ins>sub</ins> heading?</h1>
         <br>    
-        <p>agni inventore et? Repellendus culpa placeat consectetur? Placeat quas ea nam incidunt eveniet!</p>
+        <p style="color: blue;">agni inventore et? Repellendus culpa placeat consectetur? Placeat quas ea nam incidunt eveniet!</p>
+        </div>
         <br>
+        <div style="background-color: brown;">
         <p1> this is another para?</p1>
         <br>
         <p> this is 2nd para</p>
-
+        </div>
         <hr>
         <a href=" https:www.linkedIn.com" target=_blank title="this takes you to LinkedIn">
             LinkedIn
@@ -24,5 +27,34 @@
         <a href="index1.html" target ="_blank" title="A cute image">
             <h3> Dont click here </h3>
         </a>
+
+
+        <table b>
+            <h1> College timings </h1>
+        <tr width="700"style="background-color: aquamarine;" align="left">
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thusday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+            <th>Sunday</th>
+        </tr>
+        <tr bgcolor="Lightblue" align="left">
+            <th> 9-3</th>
+            <th> 9-3</th>
+            <th> 9-3</th>
+            <th> 9-3</th>
+            <th> 9-3</th>
+            <th> 9-3</th>
+            <th> Closed</th>
+        </tr>
+        </table>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.<span style="color: darkgoldenrod;"> Et provident natus ab praesentium ad consectetur quos impedit eum nulla illo ullam modi iure aliquid aliquam soluta obcaecati velit,</span>?cum rerum?
+        </p>
+
+
     </body>
 </html>
