--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <h1>This is a heading </h1>
     <hr>
     <body>
+        <meta name="author" content="P.R Rhishabh">
+
+
+
         <h1> This is a <ins>sub</ins> heading?</h1>
         <br>    
         <p style="color: blue;">agni inventore et? Repellendus culpa placeat consectetur? Placeat quas ea nam incidunt eveniet!</p>
@@ -52,8 +56,60 @@
         </table>
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.<span style="color: darkgoldenrod;"> Et provident natus ab praesentium ad consectetur quos impedit eum nulla illo ullam modi iure aliquid aliquam soluta obcaecati velit,</span>?cum rerum?
+            <span style="color: aquamarine;">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit.<span style="color: darkgoldenrod;"> Et provident natus ab praesentium ad consectetur quos impedit eum nulla illo ullam modi iure aliquid aliquam soluta obcaecati velit,</span>?cum rerum?
         </p>
+
+        
+
+
+        <form>
+            <div>
+            <label for="fname">name</label>
+            <input type="text" id="fname" name:="fname" placeholder="name here">
+            </div>
+
+            <div>
+               <label for="lname"> last name </label>
+               <input type="text" id="lname" name="lname" placeholder="last name here"> 
+            </div>
+
+            <div>
+                <label for="pass"> password </label>
+                <input type="password" id="pass" required maxlength="10">
+            </div>
+
+            <div>
+                <label for="phone"> phone number </label>
+                <input type="tel"  id="phone" required maxlength="10">
+            </div>
+
+            <div>
+                <input type="submit">
+                <input type="reset">
+            </div>
+
+            <div>
+                <label for="check"> Ur Correct (yes/no)</label>
+                <input type="checkbox" id="check" placeholder="check">
+            </div>
+
+            <labe for="com"> comments </label>
+            <textarea id="com"cols="26px" rows="10px"></textarea>
+
+            <br >
+
+            <label for="option"> options </label>
+            <select id="option">
+                <option value="a"> a </option>
+                <option value="b"> b </option>
+                <option value="c"> c </option>
+                <option value="d"> d </option>
+            </select>
+        </form>
+
+        <br >
+        <label> upload ur file </label>
+        <input type="file" accept="image/png, image/jpeg">
 
 
     </body>
