--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <h1>This is a heading </h1>
     <hr>
     <body>
+
+        <link rel="stylesheet" href="style.css">
+
+
+
+
+
         <meta name="author" content="P.R Rhishabh">
-
-
-
+        <h1>this is a header below </h1>
+        <header>
         <h1> This is a <ins>sub</ins> heading?</h1>
         <br>    
         <p style="color: blue;">agni inventore et? Repellendus culpa placeat consectetur? Placeat quas ea nam incidunt eveniet!</p>
@@ -18,7 +24,7 @@
         <div style="background-color: brown;">
         <p1> this is another para?</p1>
         <br>
-        <p> this is 2nd para</p>
+        <p id="p1"> this is 2nd para</p>
         </div>
         <hr>
         <a href=" https:www.linkedIn.com" target=_blank title="this takes you to LinkedIn">
@@ -31,11 +37,11 @@
         <a href="index1.html" target ="_blank" title="A cute image">
             <h3> Dont click here </h3>
         </a>
-
+         </header>
 
         <table b>
-            <h1> College timings </h1>
-        <tr width="700"style="background-color: aquamarine;" align="left">
+            <h1 class="clor1"> College timings </h1>
+        <tr width="700" align="left">
             <th>Monday</th>
             <th>Tuesday</th>
             <th>Wednesday</th>
@@ -61,20 +67,20 @@
 
         
 
-
+        <footer>
         <form>
             <div>
-            <label for="fname">name</label>
+            <label for="fname" id="color1">name</label>
             <input type="text" id="fname" name:="fname" placeholder="name here">
             </div>
 
             <div>
-               <label for="lname"> last name </label>
+               <label for="lname" id="color1"> last name </label>
                <input type="text" id="lname" name="lname" placeholder="last name here"> 
             </div>
 
             <div>
-                <label for="pass"> password </label>
+                <label for="pass" id="color1"> password </label>
                 <input type="password" id="pass" required maxlength="10">
             </div>
 
@@ -110,7 +116,7 @@
         <br >
         <label> upload ur file </label>
         <input type="file" accept="image/png, image/jpeg">
-
+    </footer>
 
     </body>
 </html>
